--- a/top.html
+++ b/top.html
@@ -1,6 +1,6 @@
 <html><head><title>
 그림 삽입</title></head>
 <body>
-<img src="independence.gif" width=100% height=100%>
+<img src="dependence.gif" width=100% height=100%>
 </body>
 </html>
