--- a/right1.html
+++ b/right1.html
@@ -4,13 +4,13 @@
 <table border=1>
 <tr>
 <td>
-<img src=06-01.jpg>
+<img src=07-01.jfif>
 </td>
 <td>
-<img src=06-02.jpg>
+<img src=07-02.png>
 </td>
 <td>
-<img src=06-03.jpg>
+<img src=07-03.jfif>
 </td>
 </tr>
 </table>
