--- a/left.html
+++ b/left.html
@@ -3,7 +3,7 @@
 </head>
 <body bgcolor=#ffffff>
 <a href=right1.html target=right>
-6월의 독립운동가</a>
+삼각함수 </a>
 <p>
 <a href=right2.html target=right>
 6월의 동영상</a>
