--- a/right2.html
+++ b/right2.html
@@ -1,8 +1,8 @@
 <html>
-<head><title>이달의 독립운동가</title></head>
+<head><title>삼각함수 노래</title></head>
 <body>
 <video width="640" height="480" controls>
-<source src="2022-06.mp4" type="video/mp4">
+<source src="2022-7.mp4" type="video/mp4">
 </video>
 </body>
 </html>
